{
    "name": "GameInputAction1",
    "maps": [
        {
            "name": "GameInput",
            "id": "8937c23e-7167-45b7-a346-d77ff43b9d47",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "cbe080f9-c1e2-4092-b793-80b6699872fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraLook",
                    "type": "Value",
                    "id": "b4e936aa-eef1-4f77-87d9-f2b6539b7529",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "7910fa73-5cc9-47b1-a146-74827eb8af4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LAttack",
                    "type": "Button",
                    "id": "45e81f70-627b-4a62-bfef-f6757ba72705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RAttack",
                    "type": "Button",
                    "id": "a2c1bc54-f983-47c8-8f41-7cd14ee1702a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Climb",
                    "type": "Button",
                    "id": "6418a4fb-afdf-4372-942c-439bd3f5ad8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "c5fdf531-6de6-425a-a8de-aa4af7dd754d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TakeOut",
                    "type": "Button",
                    "id": "1074d710-cf94-4b8b-993b-a6868a00100b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Evade",
                    "type": "Button",
                    "id": "36047728-32fd-421d-a866-4af613d95e74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ae4cc19b-0c8a-418f-910a-3d2625b52c48",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dc9aaf5a-65f3-411a-8a1f-29faac6be10b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4d856bc4-c3b5-4a9e-adbf-1265055eb3b9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e74840ec-bec3-44d5-947d-2474c64905be",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "aebe6f89-70d1-4eab-9cb8-1c9a5fd85703",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aa2d2564-2ee2-48e6-b1ff-5b5c5b6961b7",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.15,y=0.15)",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5638c1d5-b060-40bf-b14b-fd5d4c409c7e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30b45c9c-852f-45ef-b5a6-2d3de9d4ede6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "126b99cf-96e8-4211-bcf0-dded3343becd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9587c7a-f075-45f1-91cc-96e1a1ede917",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62d865f6-17a2-4f0e-833f-09e4771f4f9d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef3d0ed0-ec8c-4007-88f8-1eba951f4aaf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b68ac81-2b9f-4ae4-8e7d-ce54e451634f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Evade",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}